Update Media Query and Spacing Bug Fixes.

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
 }
 
 .app {
-  transition: background-color 500ms ease-in-out;
+  transition: background-color 700ms ease 0s;
   margin: 0;
 }
 
@@ -47,7 +47,7 @@ body {
   background-color: var(--clr-red);
 }
 
-@media (min-width: 992px) and (min-height: 600px) {
+@media (min-width: 992px) and (min-height: 650px) {
   html {
     scroll-snap-type: y mandatory;
   }
@@ -97,7 +97,7 @@ header {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 992px) and (min-height: 650px) {
   header {
     position: fixed;
   }
@@ -111,10 +111,12 @@ main {
 section {
   width: 100%;
   height: 100vh;
+  min-height: 635px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 5rem;
 }
 
 .section-small {
@@ -132,9 +134,10 @@ section {
   height: auto;
 }
 
-@media (min-width: 992px) and (min-height: 600px) {
+@media (min-width: 992px) and (min-height: 650px) {
   section {
     scroll-snap-align: start;
+    padding-top: 0;
   }
 
   .issue-img {
@@ -200,7 +203,7 @@ footer {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 992px) and (min-height: 650px) {
   .menu,
   .description,
   .contact {
